--- a/LesApp1/Resources/body_style.css
+++ b/LesApp1/Resources/body_style.css
@@ -3,38 +3,68 @@ body {
     margin: 0;
 }
 
+div {
+    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+}
+
+.class_add {
+    padding-left: 5px;
+}
+
 #id_all {
-    margin: 10px;
+    margin: 25px 15px 5px 10px;
     padding: 0;
-    background-color: gold;
+    height: 1000px;
 }
 
 #id_header {
     width: 100%;
     height: 15%;
+    background-color: rgb(109, 204, 194);
 }
 
-#id_nav {
+#id_navigation {
     width: 100%;
-    height: 5%;
+    height: 7.5%;
+    background-color: rgb(251, 147, 142);
 }
 
-#id_main{
+#id_main {
     width: 100%;
     height: 65%;
 }
 
-#id_menu {
+/* Спеціально реалізовані відступи для тексту */
+
+#id_menu_outer {
     width: 25%;
-    height: 65%;
+    height: 100%;
+    float: left;
 }
 
-#id_cont {
+#id_menu_iner {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(149, 200, 151);
+}
+
+#id_content_outer {
     width: 75%;
-    height: 65%;
+    height: 100%;
+    /* В даному випадку немає різниці */
+    /* float: left; */
+    float: right;
+}
+#id_content_iner {
+    width: 100%;
+    height: 100%;
+    background-color: rgb(201, 204, 205);
 }
 
-#id_footer{
+#id_footer {
     width: 100%;
     height: 15%;
+    background-color: rgb(45, 87, 251);
 }
